--- a/templates/newrelic_plugin_agent.Debian.startup.j2
+++ b/templates/newrelic_plugin_agent.Debian.startup.j2
@@ -1,7 +1,7 @@
 #! /bin/sh
 
 ### BEGIN INIT INFO
-# Provides:          newrelic_plugin_agent
+# Provides:          {{ newrelic_plugin_daemon_name }}
 # Required-Start:    $network $local_fs $remote_fs
 # Required-Stop:     $remote_fs
 # Should-Start:      $named
@@ -11,8 +11,10 @@
 # Short-Description: The New Relic Plugin Agent
 # Description:       The New Relic Plugin Agent
 ### END INIT INFO
-
-NAME=newrelic_plugin_agent
+###############################################################################
+#{{ ansible_managed }}
+###############################################################################
+NAME={{ newrelic_plugin_daemon_name }}
 CONFIG={{ newrelic_plugin_config_location }}/{{ newrelic_plugin_config_name }}
 DAEMON={{ newrelic_plugin_daemon_location }}/{{ newrelic_plugin_daemon_name }}
 DAEMON_OPTS="-c $CONFIG"
