--- a/templates/newrelic_plugin_agent.RedHat.startup.j2
+++ b/templates/newrelic_plugin_agent.RedHat.startup.j2
@@ -1,10 +1,12 @@
 #!/bin/bash
 # chkconfig: 2345 99 60
-# description: newrelic-plugin-agent
+# description: {{ newrelic_plugin_daemon_name }}
 # processname: {{ newrelic_plugin_daemon_name }}
 # config: {{ newrelic_plugin_config_location }}/{{ newrelic_plugin_config_name }}
 # pidfile: {{ newrelic_plugin_pid_location }}/{{ newrelic_plugin_pid_name }}
-
+###############################################################################
+#{{ ansible_managed }}
+###############################################################################
 # Source function library.
 . /etc/init.d/functions
 
