Removed mandatory filter as this is default behavior

--- a/templates/newrelic_plugin_agent.cfg.j2
+++ b/templates/newrelic_plugin_agent.cfg.j2
@@ -115,7 +115,7 @@ Application:
     - name: {{ host.name | default('localhost') }}
       host: {{ host.host | default('localhost') }}
       port: {{ host.port | default(11211) }}
-      path: {{ host.path | mandatory }}
+      path: {{ host.path }}
     {% endfor %}
 {% else %}
 # memcached plugin disabled in ansbile for this node
